[package]
name = "dpsa4fl-m4-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.22", features = ["time"] }
# async-std = "1.9"
dpsa4fl = { git = "https://github.com/dpsa4fl/dpsa4fl", branch = "main" }
url = { version = "2.3.1" }
anyhow = "1.0"
prio = { version = "0.15.2", features = ["experimental", "multithreaded"] }
# prio = {git = "https://github.com/dpsa4fl/libprio-rs.git", branch ="dp-update-for-janus-rebased", features = ["multithreaded", "experimental"]}
fixed = "1.19"
fixed-macro = "1.1.1"
# numpy = "0.17"
# ndarray = "0.15"
